@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[83] --> Add Name Developer Announce.
 [82] --> Add Name Admin, GameMaster and Guard Announces.
 [81] --> Fix Sindragosa (Final version!).
 [80] --> Update CCDelay by Diton.
